# RGFLAT

./: README.md  character_generator.py  cli.py  index.html  memory.py  presets.py  pyproject.toml  requirements.txt  roleplay_engine.py
adapters/: __init__.py  waidrin_adapter.py
ai/: __init__.py  behavior_tree.py  hybrid_ai.py
consistency/: __init__.py  consistency.py
core/: __init__.py  parameters.py  roleplay_engine.py
generators/: __init__.py  character_generator.py  dialogue_generator.py  multi_character.py  scenario_generator.py
memory/: __init__.py  memory_system.py
physics/: __init__.py  roleplay_physics.py
presets/: __init__.py  presets.py
prompts/: __init__.py  prompt_builder.py
ui/: __init__.py  __main__.py  cli.py
ui/web/: index.html  main.js  style.css
